# ScriptLang

./: CMakeLists.txt  README.md  compile.sh
include/: AST.hpp  Error.hpp  Lexer.hpp  Operator.hpp  Parser.hpp  PrintVisitor.hpp  Tokens.hpp
src/: AST.cpp  Lexer.cpp  Operator.cpp  Parser.cpp  PrintVisitor.cpp  Tokens.cpp
test/: main.cpp
testfiles/: test_arith.txt  test_string.txt  testcomma.txt
